<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="云图检索参数设置">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_cloud_id_titles"
            android:entryValues="@array/pref_cloud_id_values"
            android:key="CloudId"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_gis_cloud_id" />

        <ListPreference
            android:defaultValue=" "
            android:entries="@array/pref_cloud_keyword_titles"
            android:entryValues="@array/pref_cloud_keyword_values"
            android:key="CloudKeyWord"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_gis_cloud_keyword" />

        <ListPreference
            android:defaultValue="4000"
            android:entries="@array/pref_cloud_bound_titles"
            android:entryValues="@array/pref_bound_values"
            android:key="CloudBound"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_gis_cloud_bound" />
    </PreferenceCategory>


</PreferenceScreen>
